gitops/apps/target/game-2048/01-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  finalizers:
    - kubernetes
