gitops/apps/target/game-2048/02-Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: game-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - name: backend
          image: alexwhen/docker-2048
          ports:
            - name: http
              containerPort: 80
          resources: {}
