gitops/apps/target/game-2048/03-Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: game-2048
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: game-2048
