gitops/apps/target/game-2048/04-Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048
  namespace: game-2048
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-trimtech
spec:
  tls:
  - hosts:
    - game-2048.trimtech.com.br
    secretName: game-2048.trimtech.com.br-tls
  rules:
    - host: game-2048.trimtech.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-2048
                port:
                  number: 80
